--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
            <version>8.0.20</version>
            <scope>runtime</scope>
        </dependency>
+       <dependency>
+           <groupId>com.zaxxer</groupId>
+           <artifactId>HikariCP</artifactId>
+           <version>2.7.1</version>
+       </dependency>
+        <!-- 为了连接池引入的日志依赖-->
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-simple</artifactId>
+           <version>1.7.25</version>
+           <scope>compile</scope>
+       </dependency>
    </dependencies>
-    
+
 </project>
