--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
            <version>1.7.25</version>
            <scope>compile</scope>
        </dependency>
+       <dependency>
+           <groupId>org.junit.jupiter</groupId>
+           <artifactId>junit-jupiter</artifactId>
+           <version>RELEASE</version>
+           <scope>test</scope>
+       </dependency>
+
    </dependencies>
 
 </project>
