--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <tomcat.version>9.0.26</tomcat.version>
+        <jackson.version>2.10.0</jackson.version>
+        <pebble.version>3.1.2</pebble.version>
     </properties>
 
    <dependencies>
@@ -62,6 +64,31 @@
            <version>${tomcat.version}</version>
            <scope>provided</scope>
        </dependency>
+
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-databind</artifactId>
+           <version>${jackson.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>io.pebbletemplates</groupId>
+           <artifactId>pebble</artifactId>
+           <version>${pebble.version}</version>
+       </dependency>
+
    </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
