--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
            <artifactId>pebble</artifactId>
            <version>${pebble.version}</version>
        </dependency>
-
+       <dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-context</artifactId>
+           <version>5.2.2.RELEASE</version>
+       </dependency>
    </dependencies>
 
     <build>
