--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,25 @@
            <artifactId>spring-aspects</artifactId>
            <version>${spring.version}</version>
        </dependency>
+
+       <!-- Spring JDBC-->
+       <dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-jdbc</artifactId>
+           <version>5.1.7.RELEASE</version>
+       </dependency>
+
+       <dependency>
+           <groupId>javax.annotation</groupId>
+           <artifactId>javax.annotation-api</artifactId>
+           <version>1.3.2</version>
+       </dependency>
+
+       <dependency>
+           <groupId>org.hsqldb</groupId>
+           <artifactId>hsqldb</artifactId>
+           <version>2.5.0</version>
+       </dependency>
    </dependencies>
 
     <build>
