JdbcTemplate封装后的用法

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
-# ???????testdb:
-jdbc.url = jdbc:hsqlsb:file:testdb
+#???????testdb:
+jdbc.url = jdbc:hsqldb:file:testdb
 
-# Hsqldb???????sa????????:
+#Hsqldb???????sa????????:
 jdbc.username = sa
 jdbc.password =
