--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,19 @@
            <artifactId>hsqldb</artifactId>
            <version>2.5.0</version>
        </dependency>
+       <!-- Hibernate -->
+       <dependency>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate-core</artifactId>
+           <version>5.4.2.Final</version>
+       </dependency>
+
+       <!-- Spring ORM-->
+       <dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-orm</artifactId>
+           <version>${spring.version}</version>
+       </dependency>
    </dependencies>
 
     <build>
