调整Spring包结构 新增Spring集成Mybatis半自动ORM工具

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #???????testdb:
-jdbc.url = jdbc:hsqldb:file:testdb
+jdbc.url = jdbc:hsqldb:file:testdb2
 
 #Hsqldb???????sa????????:
 jdbc.username = sa
