--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,19 @@
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
        </dependency>
+
+       <!-- MyBatis-->
+       <dependency>
+           <groupId>org.mybatis</groupId>
+           <artifactId>mybatis</artifactId>
+           <version>3.5.4</version>
+       </dependency>
+
+       <dependency>
+           <groupId>org.mybatis</groupId>
+           <artifactId>mybatis-spring</artifactId>
+           <version>2.0.4</version>
+       </dependency>
    </dependencies>
 
     <build>
