--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,13 @@
            <artifactId>mybatis-spring</artifactId>
            <version>2.0.4</version>
        </dependency>
+
+       <!-- Spring Web MVC-->
+       <dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-webmvc</artifactId>
+           <version>${spring.version}</version>
+       </dependency>
    </dependencies>
 
     <build>
