--- a/pom.xml
+++ b/pom.xml
@@ -133,11 +133,24 @@
            <version>2.0.4</version>
        </dependency>
 
+
        <!-- Spring Web MVC-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
+       </dependency>
+
+       <dependency>
+           <groupId>ch.qos.logback</groupId>
+           <artifactId>logback-classic</artifactId>
+           <version>1.2.3</version>
+       </dependency>
+
+       <dependency>
+           <groupId>ch.qos.logback</groupId>
+           <artifactId>logback-core</artifactId>
+           <version>1.2.3</version>
        </dependency>
    </dependencies>
 
